# neuro-chess-agents

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml
scripts/: download_assets.py
src/: agent.py  config.py  logger.py  main.py
static/: index.html
